--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -1,63 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="716.0" minWidth="600.0" prefHeight="716.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController">
-    <Pane prefHeight="47.0" prefWidth="600.0">
-        <Label fx:id="CarLabel" layoutX="30.0" layoutY="20.0" prefHeight="17.0" prefWidth="23.0" text="Car:" />
-        <ChoiceBox fx:id="EmployeeChoiceBox" layoutX="358.0" layoutY="16.0" prefHeight="25.0" prefWidth="149.0" />
-        <Label layoutX="300.0" layoutY="20.0" text="Employee:" />
-        <Label fx:id="CarPlaceholderLabel" layoutX="53.0" layoutY="20.0" text="&lt;CarPlaceholder&gt;" />
+<Pane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController">
+    <Pane prefHeight="60.0" prefWidth="540.0">
+        <Label layoutX="30.0" layoutY="30.0" text="Car:"/>
+        <Label fx:id="carLabel" layoutX="53.0" layoutY="30.0" text="placeholder"/>
+        <Label layoutX="300.0" layoutY="30.0" text="Employee:"/>
+        <ChoiceBox fx:id="employeeChoiceBox" layoutX="364.0" layoutY="26.0" prefHeight="25.0" prefWidth="150.0"/>
     </Pane>
-    <Pane layoutY="47.0" prefHeight="152.0" prefWidth="600.0">
-        <Label fx:id="DurationLabel" alignment="TOP_LEFT" layoutX="30.0" layoutY="103.0" prefHeight="17.0" prefWidth="51.0" text="Duration:" />
-        <Label fx:id="CostsLabel" layoutX="300.0" layoutY="103.0" prefHeight="17.0" prefWidth="34.0" text="Costs:" />
-        <DatePicker fx:id="beginDatePicker" layoutX="30.0" layoutY="25.0" prefHeight="25.0" prefWidth="149.0" />
-        <DatePicker fx:id="endDatePicker" layoutX="30.0" layoutY="65.0" prefHeight="25.0" prefWidth="149.0" />
-        <Label layoutX="30.0" layoutY="10.0" text="Begin renting on" />
-        <Label layoutX="30.0" layoutY="50.0" text="End renting on" />
-        <Button fx:id="ConfirmDatesButton" layoutX="522.0" layoutY="65.0" mnemonicParsing="false" onAction="#handleConfirmDatesButtonClicked" text="Confirm" />
-        <Label fx:id="DurationPlaceholderLabel" layoutX="81.0" layoutY="103.0" text="&lt;DurationPlaceholder&gt;" />
-        <Label fx:id="SumCostPlaceholderLabel" layoutX="334.0" layoutY="103.0" text="&lt;SumCostPlaceholder&gt;" />
-        <Label layoutX="300.0" layoutY="68.0" text="Extra Costs:" />
-        <Label layoutX="300.0" layoutY="29.0" text="Daily Price:" />
-        <Label fx:id="DailyPricePlaceholderLabel" layoutX="362.0" layoutY="29.0" text="&lt;DailyPricePlaceholder&gt;" />
-        <TextField layoutX="362.0" layoutY="64.0" text="0" />
-        <Label layoutX="511.0" layoutY="69.0" text="€" />
+    <Pane layoutY="60.0" prefHeight="160.0" prefWidth="540.0">
+        <Label layoutX="30.0" layoutY="10.0" text="Begin renting on"/>
+        <DatePicker fx:id="beginDatePicker" layoutX="30.0" layoutY="28.0" prefHeight="25.0" prefWidth="150.0"/>
+        <Label layoutX="30.0" layoutY="65.0" text="End renting on"/>
+        <DatePicker fx:id="endDatePicker" layoutX="30.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0"/>
+        <Button layoutX="195.0" layoutY="83.0" mnemonicParsing="false" onAction="#handleConfirmButtonClicked" text="Confirm"/>
+        <Label layoutX="30.0" layoutY="120.0" text="Duration:"/>
+        <Label fx:id="durationLabel" layoutX="84.0" layoutY="120.0"/>
+        <Label layoutX="300.0" layoutY="32.0" text="Daily Price:"/>
+        <Label fx:id="dailyPriceLabel" layoutX="363.0" layoutY="32.0"/>
+        <Label layoutX="300.0" layoutY="65.0" text="Extra Costs"/>
+        <TextField fx:id="dailyPriceTextField" layoutX="300.0" layoutY="83.0" prefHeight="25.0" prefWidth="150.0" text="0"/>
+        <Label layoutX="300.0" layoutY="120.0" prefHeight="17.0" prefWidth="34.0" text="Sum:"/>
+        <Label fx:id="sumLabel" layoutX="332.0" layoutY="120.0"/>
     </Pane>
-    <Pane layoutY="199.0" prefHeight="517.0" prefWidth="600.0">
-        <TextField fx:id="IDCardTextField" layoutX="300.0" layoutY="145.0" />
-        <TextField fx:id="PostcodeTextField" layoutX="30.0" layoutY="190.0" />
-        <TextField fx:id="DriverLicenseIDTextField" layoutX="30.0" layoutY="25.0" />
-        <TextField fx:id="DateOfBirthTextField" layoutX="30.0" layoutY="145.0" />
-        <TextField fx:id="PhoneNumberTextField" layoutX="300.0" layoutY="280.0" />
-        <TextField fx:id="LastNameTextField" layoutX="30.0" layoutY="90.0" />
-        <TextField fx:id="StreetTextField" layoutX="30.0" layoutY="235.0" />
-        <TextField fx:id="HouseNumberTextField" layoutX="300.0" layoutY="235.0" />
-        <TextField fx:id="FirstNameTextField" layoutX="300.0" layoutY="90.0" />
-        <Button fx:id="SearchForCustomerButton" layoutX="189.0" layoutY="25.0" mnemonicParsing="false" onAction="#handleSearchCustomerButtonClicked" text="Search" />
-        <Button fx:id="ConfirmRentButton" layoutX="526.0" layoutY="438.0" mnemonicParsing="false" onAction="#handleConfirmRentButtonClicked" text="Book" />
-        <TextField fx:id="EMailTextField" layoutX="30.0" layoutY="280.0" />
-        <Label layoutX="30.0" layoutY="70.0" text="Last name:" />
-        <Label layoutX="301.0" layoutY="70.0" text="First name:" />
-        <Label layoutX="30.0" layoutY="125.0" text="Date of birth:" />
-        <Label layoutX="301.0" layoutY="125.0" text="ID Card:" />
-        <Label layoutX="30.0" layoutY="175.0" text="Postcode:" />
-        <Label layoutX="30.0" layoutY="220.0" text="Street:" />
-        <Label layoutX="300.0" layoutY="220.0" text="Housenumber:" />
-        <Label layoutX="300.0" layoutY="265.0" text="Phonenumber:" />
-        <Label layoutX="30.0" layoutY="265.0" text="E-Mail:" />
-        <Label layoutX="30.0" layoutY="10.0" text="Driver License ID:" />
-        <Label layoutX="300.0" layoutY="175.0" text="City:" />
-        <TextField fx:id="CityTextField" layoutX="300.0" layoutY="190.0" />
-        <Button fx:id="CancelButton" layoutX="449.0" layoutY="438.0" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="Cancel" />
-        <TextArea fx:id="NotesTextArea" layoutX="30.0" layoutY="353.0" prefHeight="152.0" prefWidth="399.0" />
-        <Label layoutX="30.0" layoutY="336.0" text="Notes:" />
+    <Pane layoutY="220.0" prefHeight="510.0" prefWidth="540.0">
+        <Label layoutX="30.0" layoutY="10.0" text="%customer-driver-license-id-label"/>
+        <TextField fx:id="driverLicenseIdTextField" layoutX="30.0" layoutY="30.0" prefHeight="25.0" prefWidth="150.0"/>
+        <Button layoutX="195.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSearchButtonClicked" text="%button-search-label"/>
+        <Label layoutX="30.0" layoutY="70.0" text="%customer-first-name-label"/>
+        <TextField fx:id="firstNameTextField" layoutX="30.0" layoutY="90.0"/>
+        <Label layoutX="300.0" layoutY="70.0" text="%customer-last-name-label"/>
+        <TextField fx:id="lastNameTextField" layoutX="300.0" layoutY="90.0"/>
+        <Label layoutX="30.0" layoutY="130.0" text="%customer-id-number-label"/>
+        <TextField fx:id="idNumberTextField" layoutX="30.0" layoutY="150.0"/>
+        <Label layoutX="300.0" layoutY="130.0" text="%customer-date-of-birth-label"/>
+        <TextField fx:id="dateOfBirthTextField" layoutX="300.0" layoutY="150.0"/>
+        <Label layoutX="30.0" layoutY="190.0" text="%customer-zip-code-label"/>
+        <TextField fx:id="zipCodeTextField" layoutX="30.0" layoutY="210.0"/>
+        <Label layoutX="300.0" layoutY="190.0" text="%customer-city-label"/>
+        <TextField fx:id="cityTextField" layoutX="300.0" layoutY="210.0"/>
+        <Label layoutX="30.0" layoutY="250.0" text="%customer-street-label"/>
+        <TextField fx:id="streetTextField" layoutX="30.0" layoutY="270.0"/>
+        <Label layoutX="300.0" layoutY="250.0" text="%customer-house-number-label"/>
+        <TextField fx:id="houseNumberTextField" layoutX="300.0" layoutY="270.0"/>
+        <Label layoutX="30.0" layoutY="310.0" text="%customer-email-label"/>
+        <TextField fx:id="emailTextField" layoutX="30.0" layoutY="330.0"/>
+        <Label layoutX="300.0" layoutY="310.0" text="%customer-phone-number-label"/>
+        <TextField fx:id="phoneNumberTextField" layoutX="300.0" layoutY="330.0"/>
+        <Label layoutX="30.0" layoutY="370.0" text="%rental-note-label"/>
+        <TextArea fx:id="noteTextArea" layoutX="30.0" layoutY="390.0" prefHeight="100.0" prefWidth="250.0"/>
+        <Button layoutX="300.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleCancelButtonClicked" text="%button-cancel-label"/>
+        <Button layoutX="401.0" layoutY="463.0" mnemonicParsing="false" onAction="#handleApplyButtonClicked" text="%button-apply-label"/>
     </Pane>
 </Pane>
