--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -2,9 +2,10 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.Pane?>
-<Pane onKeyPressed="#handleKeyEvent"
+<Pane xmlns="http://javafx.com/javafx"
       xmlns:fx="http://javafx.com/fxml"
-      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController">
+      fx:controller="de.htwsaar.prog3.carrental.controller.RentalEditViewController"
+      onKeyPressed="#handleKeyEvent">
     <!-- TODO i18n -->
     <Pane prefHeight="60.0" prefWidth="540.0">
         <Label layoutX="30.0" layoutY="30.0" text="Car:"/>
