--- a/src/main/resources/fxml/RentalTableView.fxml
+++ b/src/main/resources/fxml/RentalTableView.fxml
@@ -5,9 +5,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import java.util.HashMap?>
-<BorderPane onKeyPressed="#handleKeyEvent"
+<BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="de.htwsaar.prog3.carrental.controller.RentalTableViewController">
+            fx:controller="de.htwsaar.prog3.carrental.controller.RentalTableViewController"
+            onKeyPressed="#handleKeyEvent">
     <top>
         <GridPane BorderPane.alignment="CENTER">
             <columnConstraints>
@@ -34,8 +35,8 @@
                     <MenuItem mnemonicParsing="false" text="%menubar-operation-close" onAction="#handleCloseMenuItemClicked"/>
                 </Menu>
                 <Menu text="%menubar-view-edit">
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-edit" onAction="#handleEditButtonClicked"/>
-                    <MenuItem mnemonicParsing="false" text="%menubar-operation-delete" onAction="#handleDeleteButtonClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-edit" onAction="#handleEditClicked"/>
+                    <MenuItem mnemonicParsing="false" text="%menubar-operation-delete" onAction="#handleDeleteClicked"/>
                 </Menu>
                 <Menu text="%menubar-view-help">
                     <MenuItem mnemonicParsing="false" text="%menubar-operation-about" onAction="#handleAboutMenuItemClicked"/>
@@ -112,8 +113,8 @@
             <contextMenu>
                 <ContextMenu>
                     <items>
-                        <MenuItem text="%button-edit-label" onAction="#handleEditButtonClicked"/>
-                        <MenuItem text="%button-delete-label" onAction="#handleDeleteButtonClicked"/>
+                        <MenuItem text="%button-edit-label" onAction="#handleEditClicked"/>
+                        <MenuItem text="%button-delete-label" onAction="#handleDeleteClicked"/>
                     </items>
                 </ContextMenu>
             </contextMenu>
@@ -128,10 +129,10 @@
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
             </rowConstraints>
-            <Button mnemonicParsing="false" onAction="#handleEditButtonClicked" text="%button-edit-label"
+            <Button mnemonicParsing="false" onAction="#handleEditClicked" text="%button-edit-label"
                     textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="CENTER"
                     GridPane.valignment="CENTER"/>
-            <Button mnemonicParsing="false" onAction="#handleDeleteButtonClicked" text="%button-delete-label"
+            <Button mnemonicParsing="false" onAction="#handleDeleteClicked" text="%button-delete-label"
                     textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="0" GridPane.halignment="CENTER"
                     GridPane.valignment="CENTER"/>
         </GridPane>
