--- a/src/main/resources/fxml/RentalEditView.fxml
+++ b/src/main/resources/fxml/RentalEditView.fxml
@@ -23,54 +23,39 @@
                     <RowConstraints/>
                     <RowConstraints prefHeight="35.0" valignment="BASELINE"/>
                     <RowConstraints/>
+                    <RowConstraints prefHeight="35.0" valignment="BASELINE"/>
+                    <RowConstraints/>
+                    <RowConstraints prefHeight="35.0" valignment="BASELINE"/>
+                    <RowConstraints/>
                     <RowConstraints/>
                 </rowConstraints>
                 <!-- Row 1 -->
-                <Label text="%rental.label.car" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-                <TextField fx:id="carTextField" GridPane.rowIndex="1" GridPane.columnIndex="0" disable="true"/>
+                <Label text="%rental.label.customer" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <ComboBox fx:id="customerComboBox" GridPane.rowIndex="1" GridPane.columnIndex="0" maxWidth="Infinity"/>
                 <Label text="%rental.label.employee" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
                 <ComboBox fx:id="employeeComboBox" GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="Infinity"/>
                 <!-- Row 2 -->
-                <Label text="%rental.label.start" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-                <DatePicker fx:id="startDatePicker" GridPane.rowIndex="3" GridPane.columnIndex="0" onAction="#handleDateAndPriceChanges"/>
-                <Label text="%rental.label.end" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-                <DatePicker fx:id="endDatePicker" GridPane.rowIndex="3" GridPane.columnIndex="1" onAction="#handleDateAndPriceChanges"/>
+                <Label text="%rental.label.car" GridPane.rowIndex="2" GridPane.columnIndex="0"/>
+                <TextField fx:id="carTextField" GridPane.rowIndex="3" GridPane.columnIndex="0" disable="true"/>
+                <Label text="%car.label.daily-rate" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+                <TextField fx:id="dailyRateTextField" GridPane.rowIndex="3" GridPane.columnIndex="1" disable="true"/>
                 <!-- Row 3 -->
-                <Label text="%rental.label.duration" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-                <TextField fx:id="durationTextField" GridPane.rowIndex="5" GridPane.columnIndex="0" editable="false"/>
-                <Label text="%car.label.daily-rate" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-                <TextField fx:id="dailyRateTextField" GridPane.rowIndex="5" GridPane.columnIndex="1" editable="false"/>
+                <Label text="%rental.label.start" GridPane.rowIndex="4" GridPane.columnIndex="0"/>
+                <DatePicker fx:id="startDatePicker" GridPane.rowIndex="5" GridPane.columnIndex="0" onAction="#handleDateAndPriceChanges"/>
+                <Label text="%rental.label.end" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+                <DatePicker fx:id="endDatePicker" GridPane.rowIndex="5" GridPane.columnIndex="1" onAction="#handleDateAndPriceChanges"/>
                 <!-- Row 4 -->
-                <Label text="%rental.label.extra-costs" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-                <IntegerField fx:id="extraCostsIntegerField" GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-                <Label text="%rental.label.total" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
-                <TextField fx:id="sumTextField" GridPane.rowIndex="7" GridPane.columnIndex="1" editable="false"/>
-            </GridPane>
-            <!-- TODO -->
-            <GridPane visible="false">
-                <Label text="%customer.label.driver-license-number"/>
-                <TextField fx:id="driverLicenseIdTextField"/>
-                <Button text="%search.button.submit" onAction="#handleSearchButtonClicked"/>
-                <Label text="%customer.label.first-name"/>
-                <TextField fx:id="firstNameTextField"/>
-                <Label text="%customer.label.last-name"/>
-                <TextField fx:id="lastNameTextField"/>
-                <Label text="%customer.label.id-number"/>
-                <TextField fx:id="idNumberTextField"/>
-                <Label text="%customer.label.date-of-birth"/>
-                <TextField fx:id="dateOfBirthTextField"/>
-                <Label text="%customer.label.zipcode"/>
-                <IntegerField fx:id="zipcodeIntegerField"/>
-                <Label text="%customer.label.city"/>
-                <TextField fx:id="cityTextField"/>
-                <Label text="%customer.label.street"/>
-                <TextField fx:id="streetTextField"/>
-                <Label text="%customer.label.email"/>
-                <TextField fx:id="emailTextField"/>
-                <Label text="%customer.label.phone"/>
-                <TextField fx:id="phoneNumberTextField"/>
-                <Label text="%rental.label.note"/>
-                <TextArea fx:id="noteTextArea" prefHeight="20" prefWidth="50"/>
+                <Label text="%rental.label.duration" GridPane.rowIndex="6" GridPane.columnIndex="0"/>
+                <TextField fx:id="durationTextField" GridPane.rowIndex="7" GridPane.columnIndex="0" editable="false"/>
+                <Label text="%rental.label.extra-costs" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+                <IntegerField fx:id="extraCostsIntegerField" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+                <!-- Row 5 -->
+                <Label text="%rental.label.total" GridPane.rowIndex="8" GridPane.columnIndex="0"/>
+                <TextField fx:id="sumTextField" GridPane.rowIndex="9" GridPane.columnIndex="0" editable="false"/>
+                <!-- Row 6 -->
+                <Label text="%rental.label.note" GridPane.rowIndex="10" GridPane.columnIndex="0"/>
+                <TextArea fx:id="noteTextArea" GridPane.rowIndex="11" GridPane.columnIndex="0" GridPane.columnSpan="2"
+                          prefHeight="75" prefWidth="150"/>
             </GridPane>
             <BorderPane.margin>
                 <Insets top="20.0" bottom="25.0"/>
